# otelc

./: .gitignore  .sonar-project.properties  CHANGELOG.md  MAINTAINERS.md  NOTICE  README.md  meson.build
.github/workflows/: coverity.yml
.reuse/: dep5
include/otelc/: common.h  meson.build  metrics.h  otelcver.h.in  time.h  tracing.h
src/: empty.c  metrics.c  time.c  tracing.c
tests/: test_time.c
